[package]
name = "tsdbperf"
version = "0.1.0"
authors = ["Vince <vince.vasta@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4" }
env_logger = "0.7"
futures = "0.3"
log = "0.4"
num_cpus = "1.0"
rand = "0.7"
rand_distr = "0.3"
structopt = "0.3"
tokio = { version = "0.3", features = ["full"] }
tokio-postgres = { version = "0.6", features = ["with-chrono-0_4"] }
