[package]
name = "tsdbperf"
version = "0.1.8"
authors = ["Vince <vince.vasta@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4" }
env_logger = "0.8"
futures = "0.3"
log = "0.4"
num_cpus = "1.0"
rand = "0.8"
rand_distr = "0.4"
serde = "1.0"
serde_json = { version = "1.0", features = [ "preserve_order"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }

[dev-dependencies]
lazy_static = "1"